<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scissors" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_weapon" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rockButtonPressed"
            android:text="@string/rock" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="paperButtonPressed"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scissorsButtonPressed"
            android:text="@string/scissors" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/playerWeaponView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/computerWeaponView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/resultsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>